style.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap");

:root {
  --green: #27ae60;
  --black: #2c2c54;
  --yellow: #ffc800;
  --box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
  --secondary-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
  --border: 0.2rem solid rgba(0, 0, 0, 0.1);
  --outline: 0.1rem solid var(--black);
  --outline-hover: 0.2rem solid var(--yellow);
}

* {
  font-family: "Nunito", sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: none;
  border: none;
  text-decoration: none;
  text-transform: capitalize;
  transition: all 0.2s linear;
}

*::selection {
  background: var(--yellow);
  color: #fff;
}

html {
  font-size: 62.5%;
  overflow-x: hidden;
  scroll-padding-top: 6.5rem;
  scroll-behavior: smooth;
}

section {
  padding: 2rem 9%;
}

.btn {
  outline: 0;
  grid-gap: 8px;
  align-items: center;
  background-color: var(--yellow);
  color: var(--black);
  border: 1px solid var(--black);
  border-radius: 4px;
  cursor: pointer;
  display: inline-flex;
  flex-shrink: 0;
  font-size: 16px;
  gap: 8px;
  justify-content: center;
  line-height: 1.5;
  overflow: hidden;
  padding: 12px 16px;
  text-decoration: none;
  text-overflow: ellipsis;
  transition: all 0.14s ease-out;
  white-space: nowrap;
}

.btn:hover {
  box-shadow: 4px 4px 0 var(--black);
  transform: translate(-4px, -4px);
}
.btn:focus-visible {
  outline-offset: 1px;
}

.heading {
  text-align: center;
  color: var(--black);
  text-transform: uppercase;
  padding: 1rem;
  font-size: 3.5rem;
  padding-bottom: 2rem;
}

.heading span {
  color: var(--yellow);
  text-transform: uppercase;
}

.logo {
  color: var(--black);
  font-weight: bolder;
  font-size: 3rem;
}

.logo i {
  padding-right: 0.5rem;
  color: var(--yellow);
}

.header-2 {
  background: #fff;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2rem 9%;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
  position: relative;
}

.header-2.active {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10000;
}

.header-2 .navbar a {
  padding: 0.5rem 1.5rem;
  font-size: 2rem;
  border-radius: 0.5rem;
  color: var(--black);
  transition: all 0.3s;
}

.header-2 .navbar a:hover {
  letter-spacing: 2px;
  color: var(--yellow);
  /* color: #fff; */
}

.header-2 .icons a {
  font-size: 2.5rem;
  color: var(--black);
  padding-left: 1rem;
}

.header-2 .icons a:hover {
  color: var(--yellow);
}

#menu-bar {
  font-size: 3rem;
  border-radius: 0.5rem;
  /* border: 0.1rem solid var(--black); */
  padding: 0.8rem 1.5rem;
  color: var(--black);
  cursor: pointer;
  display: none;
}

.home {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}

.home .image {
  flex: 1 1 40rem;
  padding-top: 5rem;
}

.home .image img {
  width: 80%;
  margin-bottom: 3rem;
}

.home .content {
  flex: 1 1 40rem;
}

.home .content span {
  font-size: 3rem;
  color: #666;
}

.category-info-text {
  text-align: center;
  font-size: 2rem;
  color: #666;
}

.home .content h3 {
  font-size: 5rem;
  color: var(--black);
}

.banner-container {
  display: flex;
  flex-wrap: wrap;
  gap: 1.5rem;
}

.banner-container .banner {
  flex: 1 1 40rem;
  height: 25rem;
  overflow: hidden;
  position: relative;
}

.banner-container .banner img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.banner-container .banner .content {
  position: absolute;
  top: 50%;
  left: 4%;
  transform: translateY(-50%);
}

.banner-container .banner .content h3 {
  font-size: 3rem;
  color: var(--black);
}

.banner-container .banner .content p {
  font-size: 2rem;
  color: #333;
}

.banner-container .banner:hover img {
  transform: scale(1.2) rotate(-5deg);
}

.features .box-container {
  width: 80%;
  display: grid;
  margin: auto;
  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
  gap: 1.5rem;
}

.features .box-container .box {
  padding: 3rem 2rem;
  background: #fff;
  border-radius: 10px;
  outline-offset: -1rem;
  text-align: center;
  box-shadow: var(--box-shadow);
}

/* .features .box-container .box:hover {
  outline: var(--outline-hover);
  outline-offset: 0rem;
} */

.features .box-container .box img {
  margin: 1rem 0;
  height: 10rem;
}

.features .box-container .box h3 {
  font-size: 2.5rem;
  line-height: 1.8;
  color: var(--black);
}

.features .box-container .box p {
  font-size: 1.5rem;
  line-height: 1.8;
  color: var(--light-color);
  padding: 1rem 0;
}

.product .box-container {
  display: flex;
  flex-wrap: wrap;
  gap: 1.5rem;
}

.deal {
  background: url(../images/deal-bg.jpg) no-repeat;
  background-position: center;
  background-size: cover;
  padding-top: 7rem;
  padding-bottom: 7rem;
}

.deal .content {
  max-width: 50rem;
}

.deal .content .title {
  font-size: 4rem;
  color: var(--black);
}

.deal .content p {
  font-size: 1.7rem;
  padding: 1rem 0;
  color: #333;
}

.deal .content .count-down {
  display: flex;
  gap: 1rem;
  padding: 0.5rem 0;
}

.deal .content .count-down .box {
  width: 9rem;
  text-align: center;
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
  border: 0.1rem solid rgba(0, 0, 0, 0.3);
}

.deal .content .count-down .box h3 {
  color: var(--black);
  background: #fff;
  height: 7rem;
  line-height: 7rem;
  width: 100%;
  font-size: 5rem;
}

.deal .content .count-down .box span {
  display: block;
  background: var(--black);
  color: #fff;
  width: 100%;
  padding: 0.5rem;
  font-size: 2rem;
}

.contact form {
  text-align: center;
  padding: 2rem;
  border: 0.1rem solid rgba(0, 0, 0, 0.3);
}

.contact form .inputBox {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.contact form .inputBox input,
.contact form textarea {
  padding: 1rem;
  font-size: 1.7rem;
  background: #f7f7f7;
  text-transform: none;
  margin: 1rem 0;
  border: 0.1rem solid rgba(0, 0, 0, 0.3);
  width: 49%;
}

.contact form textarea {
  height: 20rem;
  resize: none;
  width: 100%;
}

.newsletter {
  background: url(../images/newsletter-bg.jpg) no-repeat;
  background-size: cover;
  background-position: center;
  text-align: center;
  padding: 5rem 2rem;
}

.newsletter h3 {
  font-size: 3rem;
  color: var(--black);
}

.newsletter form {
  max-width: 55rem;
  display: flex;
  align-items: center;
  margin: 1rem auto;
  padding: 1.5rem;
  background: rgba(0, 0, 0, 0.1);
}

.newsletter form .box {
  width: 100%;
  padding: 0.7rem 1.5rem;
  font-size: 1.7rem;
  color: #333;
  text-transform: none;
}

.newsletter form .btn {
  margin-top: 0;
}

.footer .box-container {
  display: flex;
  gap: 1.5rem;
  flex-wrap: wrap;
}

.footer .box-container .box {
  padding: 1rem 0;
  flex: 1 1 25rem;
}

.footer .box-container .box .share a {
  padding: 0;
  height: 4rem;
  width: 4rem;
  line-height: 4rem;
  text-align: center;
}

.footer .box-container .box h3 {
  font-size: 2.5rem;
  color: var(--black);
}

.footer .box-container .box p {
  font-size: 1.3rem;
  color: #666;
  padding: 0.7rem 0;
}

.footer .box-container .box .links {
  padding: 1rem 0;
}

.footer .box-container .box .links a {
  display: block;
  padding: 0.5rem 0;
  font-size: 1.7rem;
  color: #333;
}

.footer .box-container .box .links a:hover {
  text-decoration: underline;
  color: var(--yellow);
}

.footer .credit {
  padding: 2.5rem 1rem;
  border-top: 0.1rem solid rgba(0, 0, 0, 0.1);
  margin-top: 1rem;
  text-align: center;
  font-size: 2rem;
}

.footer .credit span {
  color: var(--yellow);
}

/* media queries  */

@media (max-width: 1200px) {
  html {
    font-size: 55%;
  }
}

@media (max-width: 991px) {
  .header-1,
  .header-2 {
    padding: 2rem;
  }

  section {
    padding: 2rem;
  }
}

@media (max-width: 768px) {
  #menu-bar {
    display: initial;
  }

  .header-2 .navbar {
    background: white;
    position: absolute;
    top: 100%;
    left: 0;
    right: 0;
    /* background: var(--black); */
    padding: 1rem 2rem;
    display: none;
    /* border-radius: 10px; */
  }

  .header-2 .navbar.active {
    display: initial;
  }

  .header-2 .navbar a {
    font-size: 2.5rem;
    display: block;
    text-align: center;
    background: white;
    color: var(--black);
    padding: 2rem;
    border-radius: 0;
    /* margin: 1.5rem 0; */
  }
  .home .image img {
    width: 100%;
  }

  .home .content {
    margin: 1rem;
    text-align: center;
  }

  .home .content h3 {
    font-size: 4rem;
  }

  .deal {
    background-position: left;
  }

  .deal .content {
    max-width: 100%;
    text-align: center;
  }

  .deal .content .count-down {
    justify-content: center;
  }

  .contact form .inputBox input {
    width: 100%;
  }

  .newsletter h3 {
    font-size: 2.2rem;
  }
}

@media (max-width: 450px) {
  html {
    font-size: 50%;
  }

  .heading {
    font-size: 3rem;
  }

  .header-1 {
    flex-flow: column;
  }

  .header-1 .search-box-container {
    width: 100%;
    margin-top: 2rem;
  }

  .logo {
    font-size: 4rem;
  }

  .deal .content .count-down .box h3 {
    font-size: 4rem;
  }

  .deal .content .count-down .box span {
    font-size: 1.5rem;
  }
}

